tests/A2/reject/badMult.ul
void main(){

    string s;

    s="Hello";

    s = s*s;
}